fix gap between megamenu and header display. squeezing this into the #433 branch, but addresses #540.

--- a/static/less/megamenu.less
+++ b/static/less/megamenu.less
@@ -27,7 +27,7 @@
 					background:url('../img/dd-arrow.png') no-repeat center 0; 
 					width:100%; 
 					position:absolute; 
-					bottom:-1px; 
+					bottom:0px; 
 					left:0; 
 					display:none; 
 					z-index: 5000;
@@ -42,7 +42,7 @@
 
 			.dd { 
 				position:absolute; 
-				top:43px;
+				top:41px;
 				left:0;
 				background:#fff;
 				width:1000px;
